# selexops-plataforma

./: .env.example  .gitignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml
apps/ai-service/: README.md  pyproject.toml
apps/ai-service/app/: gateway.py  main.py
apps/api/: jest.config.js  package.json  tsconfig.json
apps/api/scripts/: fumaca-core.mjs
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.service.ts
apps/api/src/funcionarios/: funcionarios.controller.ts  funcionarios.module.ts
apps/api/src/gestao-pessoas/: aderencia-cargo.spec.ts  aderencia-cargo.ts  aderencia.controller.ts  avaliacao-360.controller.ts  avaliacao-comportamental.controller.ts  avaliacao-desempenho.controller.ts  avaliacao-desempenho.spec.ts  avaliacao-desempenho.ts  banco-perguntas.controller.ts  calcular-resultado.spec.ts  calcular-resultado.ts  colaborador-360.controller.ts  consolidacao-360.spec.ts  consolidacao-360.ts  feedback.controller.ts  gestao-pessoas.module.ts  ia-desempenho.controller.ts  ia-desempenho.spec.ts  ia-desempenho.ts  metas.controller.ts  metas.spec.ts  metas.ts  nota-avaliacao.ts  perfil-comportamental.controller.ts  perfil-potencial.controller.ts  potencial.spec.ts  potencial.ts  treinamentos.controller.ts  treinamentos.spec.ts  (+1 more)
apps/web/: package.json  tsconfig.tsbuildinfo
apps/workers/: pyproject.toml
apps/workers/src/: worker.py
docs/modules/performance-360/: ARCHITECTURE.md  ASSUMPTIONS.md  DISCOVERY.md  IMPLEMENTATION_PLAN.md
(+81 files in other folders)
